--- a/stankinsv2/solution/StankinsV2/Stankins.Amazon/Stankins.Amazon.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.Amazon/Stankins.Amazon.csproj
@@ -6,6 +6,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Stankins.HTML\Stankins.HTML.csproj" />
     <ProjectReference Include="..\StankinsCommon\StankinsCommon.csproj" />
-    <ProjectReference Include="..\StankinsObjects\StankinsObjects.csproj" />
+    <ProjectReference Include="..\StankinsObjects\Stankins.Objects.csproj" />
   </ItemGroup>
 </Project>
