--- a/stankinsv2/solution/StankinsV2/Stankins.AssemblyLoad/Stankins.AssemblyLoad.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.AssemblyLoad/Stankins.AssemblyLoad.csproj
@@ -7,7 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Stankins.Interfaces\Stankins.Interfaces.csproj" />
     <ProjectReference Include="..\StankinsCommon\StankinsCommon.csproj" />
-    <ProjectReference Include="..\StankinsObjects\StankinsObjects.csproj" />
+    <ProjectReference Include="..\StankinsObjects\Stankins.Objects.csproj" />
   </ItemGroup>
 
 </Project>
