--- a/stankinsv2/solution/StankinsV2/Stankins.Rest/Stankins.Rest.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.Rest/Stankins.Rest.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\StankinsObjects\StankinsObjects.csproj" />
+    <ProjectReference Include="..\StankinsObjects\Stankins.Objects.csproj" />
   </ItemGroup>
 
 </Project>
