--- a/stankinsv2/solution/StankinsV2/Stankins.Trello/Stankins.Trello.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.Trello/Stankins.Trello.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Stankins.Rest\Stankins.Rest.csproj" />
-    <ProjectReference Include="..\StankinsObjects\StankinsObjects.csproj" />
+    <ProjectReference Include="..\StankinsObjects\Stankins.Objects.csproj" />
   </ItemGroup>
 
 </Project>
