--- a/stankinsv2/solution/StankinsV2/Stankins.AnalyzeSolution/Stankins.AnalyzeSolution.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.AnalyzeSolution/Stankins.AnalyzeSolution.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\StankinsObjects\StankinsObjects.csproj" />
+    <ProjectReference Include="..\StankinsObjects\Stankins.Objects.csproj" />
   </ItemGroup>
 
 </Project>
