--- a/stankinsv2/solution/StankinsV2/Stankins.AzureDevOps/Stankins.AzureDevOps.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.AzureDevOps/Stankins.AzureDevOps.csproj
@@ -7,6 +7,6 @@
     <PackageReference Include="YamlDotNet.NetCore" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\StankinsObjects\StankinsObjects.csproj" />
+    <ProjectReference Include="..\StankinsObjects\Stankins.Objects.csproj" />
   </ItemGroup>
 </Project>
