--- a/stankinsv2/solution/StankinsV2/Stankins.Cachet/Stankins.Cachet.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.Cachet/Stankins.Cachet.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Stankins.Interfaces\Stankins.Interfaces.csproj" />
-    <ProjectReference Include="..\StankinsObjects\StankinsObjects.csproj" />
+    <ProjectReference Include="..\StankinsObjects\Stankins.Objects.csproj" />
   </ItemGroup>
 
 </Project>
