--- a/stankinsv2/solution/StankinsV2/Stankins.HTML/Stankins.HTML.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.HTML/Stankins.HTML.csproj
@@ -8,7 +8,7 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.8.14" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\StankinsObjects\StankinsObjects.csproj" PrivateAssets="all" />
+    <ProjectReference Include="..\StankinsObjects\Stankins.Objects.csproj" PrivateAssets="all" />
   </ItemGroup>
   <Target Name="CopyProjectReferencesToPackage" DependsOnTargets="ResolveReferences">
     <ItemGroup>
