--- a/stankinsv2/solution/StankinsV2/Stankins.Version/Stankins.Version.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.Version/Stankins.Version.csproj
@@ -8,6 +8,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Stankins.HTML\Stankins.HTML.csproj" />
-    <ProjectReference Include="..\StankinsObjects\StankinsObjects.csproj" />
+    <ProjectReference Include="..\StankinsObjects\Stankins.Objects.csproj" />
   </ItemGroup>
 </Project>
