--- a/stankinsv2/solution/StankinsV2/Stankins.XML/Stankins.XML.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.XML/Stankins.XML.csproj
@@ -5,6 +5,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\StankinsCommon\StankinsCommon.csproj" />
-    <ProjectReference Include="..\StankinsObjects\StankinsObjects.csproj" />
+    <ProjectReference Include="..\StankinsObjects\Stankins.Objects.csproj" />
   </ItemGroup>
 </Project>
