--- a/stankinsv2/solution/StankinsV2/StankinsReceiverDB/Stankins.ReceiverDB.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsReceiverDB/Stankins.ReceiverDB.csproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\StankinsCommon\StankinsCommon.csproj" />
-    <ProjectReference Include="..\StankinsObjects\StankinsObjects.csproj" />
+    <ProjectReference Include="..\StankinsObjects\Stankins.Objects.csproj" />
   </ItemGroup>
 
 </Project>
