--- a/stankinsv2/solution/StankinsV2/Stankins.File/Stankins.FileOps.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.File/Stankins.FileOps.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Stankins.Interfaces\Stankins.Interfaces.csproj" />
-    <ProjectReference Include="..\StankinsCommon\StankinsCommon.csproj" PrivateAssets="all" />
+    <ProjectReference Include="..\StankinsCommon\Stankins.Common.csproj" PrivateAssets="all" />
     <ProjectReference Include="..\StankinsObjects\Stankins.Objects.csproj" PrivateAssets="all" />
   </ItemGroup>
   <Target Name="CopyProjectReferencesToPackage" DependsOnTargets="ResolveReferences">
