--- a/stankinsv2/solution/StankinsV2/Stankins.SimpleRecipes/Stankins.SimpleRecipes.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.SimpleRecipes/Stankins.SimpleRecipes.csproj
@@ -9,7 +9,7 @@
     <ProjectReference Include="..\Stankins.AzureDevOps\Stankins.AzureDevOps.csproj" />
     <ProjectReference Include="..\Stankins.Office\Stankins.Office.csproj" />
     <ProjectReference Include="..\Stankins.SqlServer\Stankins.SqlServer.csproj" />
-    <ProjectReference Include="..\StankinsCommon\StankinsCommon.csproj" />
+    <ProjectReference Include="..\StankinsCommon\Stankins.Common.csproj" />
     <ProjectReference Include="..\StankinsObjects\Stankins.Objects.csproj" />
   </ItemGroup>
 
