--- a/stankinsv2/solution/StankinsV2/Stankins.XML/Stankins.XML.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.XML/Stankins.XML.csproj
@@ -4,7 +4,7 @@
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\StankinsCommon\StankinsCommon.csproj" />
+    <ProjectReference Include="..\StankinsCommon\Stankins.Common.csproj" />
     <ProjectReference Include="..\StankinsObjects\Stankins.Objects.csproj" />
   </ItemGroup>
 </Project>
