--- a/stankinsv2/solution/StankinsV2/StankinsReceiverDB/Stankins.ReceiverDB.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsReceiverDB/Stankins.ReceiverDB.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\StankinsCommon\StankinsCommon.csproj" />
+    <ProjectReference Include="..\StankinsCommon\Stankins.Common.csproj" />
     <ProjectReference Include="..\StankinsObjects\Stankins.Objects.csproj" />
   </ItemGroup>
 
