--- a/stankinsv2/solution/StankinsV2/Stankins.Amazon/Stankins.Amazon.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.Amazon/Stankins.Amazon.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Stankins.HTML\Stankins.HTML.csproj" />
-    <ProjectReference Include="..\StankinsCommon\StankinsCommon.csproj" />
+    <ProjectReference Include="..\StankinsCommon\Stankins.Common.csproj" />
     <ProjectReference Include="..\StankinsObjects\Stankins.Objects.csproj" />
   </ItemGroup>
 </Project>
