--- a/stankinsv2/solution/StankinsV2/StankinsTestXUnit/StankinsTestXUnit.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsTestXUnit/StankinsTestXUnit.csproj
@@ -23,6 +23,7 @@
     <None Remove="Assets\bg.html" />
     <None Remove="Assets\bookmarks_11_17_17.html" />
     <None Remove="Assets\bookmarks_11_17_17N.html" />
+    <None Remove="Assets\Excel\colect.xlsx" />
     <None Remove="Assets\Excel\conc.xls" />
     <None Remove="Assets\Excel\convert.xls" />
     <None Remove="Assets\Excel\curs.xls" />
@@ -48,6 +49,9 @@
     <None Remove="Assets\dll\Stankins.File.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Excel\colect.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\Excel\conc.xls">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
