--- a/stankinsv2/solution/StankinsV2/StankinsTestXUnit/StankinsTestXUnit.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsTestXUnit/StankinsTestXUnit.csproj
@@ -27,6 +27,7 @@
     <None Remove="Assets\Excel\conc.xls" />
     <None Remove="Assets\Excel\convert.xls" />
     <None Remove="Assets\Excel\curs.xls" />
+    <None Remove="Assets\Excel\Daily.xlsx" />
     <None Remove="Assets\Excel\empty.xlsx" />
     <None Remove="Assets\Excel\neometrics.xlsx" />
     <None Remove="Assets\Excel\newempty.xlsx" />
@@ -59,6 +60,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\Excel\curs.xls">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\Excel\Daily.xlsx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\Excel\empty.xlsx">
